@startuml

title US250 - As an Administrator, I want to get a list of all sensors in a room, so that I can configure them.
skinparam titleBorderRoundCorner 10
skinparam titleBorderThickness 2
skinparam titleBorderColor indianred
skinparam titleBackgroundColor Snow
skinparam FontName quicksand
skinparam titleFontSize 10
skinparam roundcorner 10


skinparam class {
 BorderColor indianred
 BackgroundColor indianred
 BackgroundColor Snow
  roundcorner 10
  ArrowFontName Verdana
  ArrowColor indianred
  ArrowFontColor darkslategrey
   FontSize 12
}


class RoomConfigurationWebController
class RoomRepository
class ResponseEntity
class RoomMapper

Postman -- RoomConfigurationWebController : >
RoomConfigurationWebController -- ResponseEntity : >
RoomConfigurationWebController -- RoomRepository : >
RoomRepository -- RoomDTO : >
RoomRepository -- RoomDTOMinimal : >
RoomRepository -- RoomDTOMinimal : >
RoomRepository -- RoomCrudRepo : >
RoomDTO -- RoomSensorDTOMinimal : >
RoomDTO -- RoomSensorDTO : >
RoomRepository -- RoomMapper : >


class RoomConfigurationWebController {
retrieveAllSensors(@PathVariable String id)
}

class RoomRepository {
getRoomDTOByName(String name)
}

class RoomCrudRepo {
findById(String)
}

class RoomMapper {
objectToDTO(GeographicArea)
}

class RoomDTO {
getSensorDTOMinimalistList()
}

@enduml